# RDStoH5AD

./: .gitignore  README.md  pyproject.toml
src/rdstoh5ad/: cli.py
src/rdstoh5ad/r/: rds_to_h5ad.R
tests/: test_cli.py
